# PixelChangeCheck

./: .gitignore  Cargo.toml  PRD.md  README.md  StatusToDoComplete.md  build.rs  setup.sh  wrapper.h
benches/: benchmarks.rs
examples/: screen_receiver.rs  screen_sender.rs  simple_screen_share.rs
include/: libavcodec  libavformat  libavutil  libswscale
src/: lib.rs  main.rs
src/capture/: mod.rs
src/encoder/: mod.rs
src/network/: config.rs  mod.rs  protocol.rs  resilience.rs  transport.rs
src/pcc/: detector.rs  mod.rs  types.rs
src/server/: mod.rs
src/server/network/: mod.rs
src/server/renderer/: buffer.rs  mod.rs
tests/: integration_tests.rs
