[package]
name = "pixel-change-check-client"
version = "0.1.0"
edition = "2021"
authors = ["Carter LaSalle"]
description = "High-performance screen capture client with PCC (Pixel Change Check)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Screen capture
screenshots = "0.8.5"  # Cross-platform screen capture
display-info = "0.4.3" # Display information

# Image processing
image = "0.24"         # Image processing utilities
rgb = "0.8"           # RGB/pixel manipulation

# FFmpeg bindings
ffmpeg-next = "6.1.1" # FFmpeg bindings for encoding

# Compression
flate2 = "1.0"        # ZLIB compression

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"   # Async trait support

# Network
quinn = "0.10"        # QUIC protocol implementation
bytes = "1.5"         # Byte manipulation utilities
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.12"        # Certificate generation

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"       # Efficient binary serialization

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3         # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Maximize optimization opportunities
panic = "abort"      # Remove panic unwinding code
strip = true         # Strip symbols from binary
