[package]
name = "pixel-change-check-client"
version = "0.1.0"
edition = "2021"
authors = ["Carter LaSalle"]
description = "High-performance screen capture client with PCC (Pixel Change Check)"

[[example]]
name = "simple_screen_share"
path = "examples/simple_screen_share.rs"

[dependencies]
# Screen capture
screenshots = "0.8.5"
display-info = "0.4.3"

# Image processing
image = { version = "0.24", features = ["jpeg", "png"] }
rgb = "0.8"
jpeg-encoder = { version = "0.5", features = ["simd"] }

# Video processing
ffmpeg-next = { version = "4.4", features = ["build"] }

# Compression
lz4_flex = "0.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Network
quinn = "0.10"
bytes = "1.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# System info
num_cpus = "1.16"

[features]
default = []
build = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true